Fix the focus rectangle getting cut off in navigation

--- a/css-src/theme.css
+++ b/css-src/theme.css
@@ -91,6 +91,12 @@ hr {
   text-align: center;
 }
 
+.top-nav a:active,
+.top-nav a:focus {
+  position: relative;
+  z-index: 10;
+}
+
 .i-20 {
   height: 20px;
   width: 20px;
